test/tests/compiler/9_functions/valid/libraries/no_function_calls/division_client.plx
pub fn f(a: i32, b: i32, c: i32, d: i32) i32;

pub fn main(none) i32 {
    return f(10, 2, 100, 4)
}
